syntax = "proto3";

package dsproject;

option go_package = "blogpb";

service BlogService {
  rpc CreateBlog(CreateBlogReq) returns (CreateBlogRes);
  rpc ReadBlog(ReadBlogReq) returns (ReadBlogRes);
  rpc UpdateBlog(UpdateBlogReq) returns (UpdateBlogRes);
  rpc DeleteBlog(DeleteBlogReq) returns (DeleteBlogRes);
  rpc ListBlogs(ListBlogReq) returns (stream ListBlogRes);
}

message Blog {
  string id = 1;
  string author_id = 2;
  string title = 3;
  string content= 4;
}

// CreateBlog Request / Response
message CreateBlogReq {
  Blog blog = 1; // Blog id blank
}

message CreateBlogRes {
  Blog blog = 1; // Blog id filled in
}
// UpdateBlog Request / Response
message UpdateBlogReq {
  Blog blog = 1;
}

message UpdateBlogRes {
  Blog blog = 1;
}

// ReadBlog Request / Response
message ReadBlogReq {
  string id = 1;
}

message ReadBlogRes {
  Blog blog = 1;
}

// DeleteBlog Request / Response
message DeleteBlogReq {
  string id = 1;
}

message DeleteBlogRes {
  bool success = 1;
}

// ListBlogs Request/Response
message ListBlogReq {}

message ListBlogRes {
    Blog blog = 1;
}